# docker-images

./: README.md
certbot-route53/: Makefile  crontab  docker-entrypoint.sh
certbot/route53/: Dockerfile
minio/: Dockerfile  Makefile  docker-entrypoint.sh
node/: Dockerfile  Makefile  README.md
noip/: Dockerfile  Makefile
php/: Makefile  docker-entrypoint.sh
php/Dockerfiles/: dev  main
servers/: Dockerfile  Makefile  README.md  certwatch.sh  docker-entrypoint.sh
servers/camarero/: .dockerignore  .gitignore  CMakeLists.txt
servers/camarero/src/: main.cpp  server.cpp  server.h  server_cli.cpp  server_cli.h  server_yml.cpp  server_yml.h
servers/examples/: default.backend.conf  default.frontend.conf
servers/nginx/: nginx.conf
servers/nginx/includes/: default.https.conf  default.minio_proxy.conf  default.php_fastcgi.conf  default.proxy.conf
servers/nginx/yaml/: default.js.yaml  default.php.yaml
step-ca-crt/: Dockerfile
step/crt/: Makefile  README.md  docker-entrypoint.sh
tor/: Dockerfile  Makefile
